app/styles/type.less
.section-heading {
  font-weight: 200;
  font-size: 30px;
  margin: 0.75em 1em 0.25em;
  height: 1.15em;
  width: 100%;
}

.section-heading-wrap {
  // Create a block-level element around a section-heading, usually for the
  // purpose of applying a background-color
  display: block;
  padding: 0.75em 1em 0.25em;
  margin: -0.75em -1em -0.25em;
}

p {
  font-weight: 300;
}

.type-line {
  .text {
    float: left;
    padding-right: 0.75em;
  }

  &:after {
    content: "";
    display: block;
    background-color: rgba(0,0,0,0.25);
    margin: 0.6em 0 0.4em;
    height: 1px;
    overflow: hidden;
  }
}

